--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,27 +1,24 @@
-.profile {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 40px;
+.elements {
   max-width: 880px;
   margin: 0 auto;
+  padding-top: 50px;
 }
 
 @media screen and (max-width: 1024px) {
-  .profile {
+  .elements {
     width: calc(100% - 160px * 2);
   }
 }
 
 @media screen and (max-width: 900px) {
-  .profile {
-    flex-direction: column;
+  .elements {
     width: calc(100% - 120px * 2);
   }
 }
 
-@media screen and (max-width: 768px) {
-  .profile {
+@media screen and (max-width: 821px) {
+  .elements {
     width: calc(100% - 19px * 2);
-    padding-top: 42px;
+    padding-top: 36px;
   }
 }
