--- a/blocks/profile/__item/profile__item.css
+++ b/blocks/profile/__item/profile__item.css
@@ -2,3 +2,9 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 900px) {
+  .profile__item {
+    flex-direction: column;
+  }
+}
