--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,8 +1,14 @@
 .profile__subtitle {
   margin: 0;
-  font-family: Inter Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+}
+
+@media screen and (max-width: 1024px) {
+  .profile__subtitle {
+    font-size: 16px;
+  }
 }
