--- a/page/index.css
+++ b/page/index.css
@@ -1,5 +1,4 @@
 @import url(../vendor/normalize.css);
-@import url(../blocks/body/body.css);
 @import url(../blocks/root.css);
 
 @import url(../blocks/header/header.css);
@@ -7,7 +6,19 @@
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__item/profile__item.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__button-create/profile__button-create.css);
 @import url(../blocks/profile/__button-add/profile__button-add.css);
+
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__text/cards__text.css);
+@import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__image/cards__image.css);
+
+@import url(../blocks/footer/footer.css);
