--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -9,6 +9,11 @@
   background-position: center;
   border: 2px solid #ffffff;
   padding: 0;
+  transition: opacity 0.3s ease;
+}
+
+.profile__button-add:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 1024px) {
