--- a/blocks/root.css
+++ b/blocks/root.css
@@ -4,4 +4,10 @@
   margin: auto;
   color: #ffffff;
   margin: 0 auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
