--- a/page/index.css
+++ b/page/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../fonts/Inter/inter.css);
 @import url(../blocks/root.css);
 
 @import url(../blocks/header/header.css);
@@ -22,3 +23,11 @@
 @import url(../blocks/cards/__image/cards__image.css);
 
 @import url(../blocks/footer/footer.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__close/popup__close.css);
