--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,5 +1,6 @@
 .cards__description {
   display: flex;
   justify-content: space-between;
-  margin: 25px 21px 31px;
+  margin: 25px 15px 31px 21px;
+  align-items: center;
 }
