--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,6 +1,10 @@
 .profile__title {
   margin: 0;
-  font-family: Inter, Arial, Helvetica, sans-serif;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 294px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
@@ -18,5 +22,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    max-width: 189px;
   }
 }
