--- a/page/index.css
+++ b/page/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../fonts/Inter/inter.css);
+@import url(../blocks/body.css);
 @import url(../blocks/root.css);
 
 @import url(../blocks/header/header.css);
@@ -21,6 +22,7 @@
 @import url(../blocks/cards/__text/cards__text.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__like/_active/cards__like_active.css);
 
 @import url(../blocks/footer/footer.css);
 
@@ -31,3 +33,4 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
