--- a/page/index.css
+++ b/page/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/Inter/inter.css);
+@import url(../vendor/fonts/Inter/inter.css);
 @import url(../blocks/body.css);
 @import url(../blocks/root.css);
 
@@ -25,6 +25,7 @@
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
