--- a/page/index.css
+++ b/page/index.css
@@ -35,3 +35,7 @@
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image/popup__image-scale.css);
+@import url(../blocks/popup/__image/popup__image-text.css);
