--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,11 +3,12 @@
   background-color: #ffffff;
   border-radius: 10px;
   padding: 36px;
+  width: 358px;
 }
 
 @media screen and (max-width: 559px) {
   .popup__container {
-    max-width: 282px;
+    max-width: 238px;
     padding: 25px 22px;
   }
 }
