--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,5 @@
 .profile__avatar {
   position: relative;
-  background-image: url(../../../image/Бенз.png);
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -10,6 +9,7 @@
   background-repeat: no-repeat;
   background-color: #000000;
   background-position: center;
+  background-size: cover;
 }
 
 .profile__avatar::before {
@@ -18,8 +18,8 @@
     top: 0;
     left: 0;
     background-image: url(../../../image/Avatar_edit.png);
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-repeat: no-repeat;
     background-color: #000000;
