--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__image/cards__image.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__like/cards__like-number.css);
+
+@import url(../blocks/cards/__info/cards__info.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
